--- a/non-stop/client/src/app/app.component.html
+++ b/non-stop/client/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>{{ title }}</h1>
+<div>
+  <h1>{{ title }}</h1>
+  <alert type="success">
+    <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
+  </alert>
+</div>
