--- a/non-stop/client/src/app/app.component.html
+++ b/non-stop/client/src/app/app.component.html
@@ -1,5 +1,8 @@
-<div>
+<app-nav-bar></app-nav-bar>
+
+<div class="container" style="margin-top: 140px;">
   <h1>{{ title }}</h1>
+
   <alert type="success">
     <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
   </alert>
