--- a/non-stop/client/src/styles.scss
+++ b/non-stop/client/src/styles.scss
@@ -4,4 +4,6 @@
 @import "~bootstrap/scss/bootstrap";
 
 /* Importing Datepicker SCSS file. */
-@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+//@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+@import "../node_modules/font-awesome/css/font-awesome.min.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
