add models client and httpclient

--- a/non-stop/client/src/app/nav-bar/nav-bar.component.html
+++ b/non-stop/client/src/app/nav-bar/nav-bar.component.html
@@ -12,6 +12,9 @@
             <div class="cart-no">5</div>
         </a>
 
+        <a class="btn btn-outline-secondary mr-2">Login</a>
+        <a class="btn btn-outline-secondary mr-3">Sign Up</a>
+
     </div>
 
 </div>
