--- a/non-stop/client/src/app/app.component.html
+++ b/non-stop/client/src/app/app.component.html
@@ -6,4 +6,11 @@
   <alert type="success">
     <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
   </alert>
+
+
+  <ul>
+    <li class="list-unstyled" *ngFor="let product of products">
+      {{product.name}}
+    </li>
+  </ul>
 </div>
